# BiedaOS

./: .gitignore  BiedaOS.spec  README.md  pyproject.toml  run.py
.github/workflows/: build.yml
biedaos/: __main__.py  app.py  categorize.py  db.py  parsing.py  recommend.py
biedaos/static/: app.js  index.html  style.css
docs/superpowers/plans/: 2026-07-06-biedaos.md
docs/superpowers/specs/: 2026-07-06-biedaos-design.md
tests/: test_api.py  test_api_extras.py  test_categorize.py  test_db.py  test_launcher.py  test_parsing.py  test_recommend.py
