[project]
name = "biedaos"
version = "0.1.2"
description = "Lokalny kalkulator finansowy"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["biedaos"]

[tool.setuptools.package-data]
biedaos = ["static/*"]
